# rsnet

./: .gitignore  Cargo.toml  README.md  plot_metrics.py
benches/: conv_bench.rs
data_collection/: .gitignore  README.md  augment.py  build_dataset.sh  collect.py  main.py  metadata.py  pyproject.toml  test_onnx.py  train.py
src/: custom_dataset.rs  lib.rs  main.rs  mnist_dataset.rs  model.rs  optim.rs  run.rs  train.rs
src/layers/: activations.rs  conv.rs  fc.rs  mod.rs
tests/: overfit_single_batch.rs
